Init map centered on Portugal (coords 39.4,-8.2, zoom 7)

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     const DATA_URL = BASE_API + '/penalties';
 
     // Map & UI state
-    const map = L.map('map', { zoomControl: true }).setView([-23.55, -46.63], 12); // default: São Paulo center
+    const map = L.map('map', { zoomControl: true }).setView([39.4, -8.2], 7); // default: Portugal center
     const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution: '&copy; OpenStreetMap contributors'
