--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>[v11] Mapa — Denúncias de Estacionamento</title>
+  <title>Mapa — Denúncias de Estacionamento</title>
 
   <!-- Leaflet CSS -->
   <link
