--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
 
       <div>
-        <strong>Filtrar por tipo de evento</strong>
+        <strong>Filtrar por tipo de infração</strong>
         <div id="filters" role="group" aria-label="Filtros de tipos">
           <div class="muted">Carregando tipos…</div>
         </div>
