--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
       </div>
 
       <hr style="margin:12px 0;" />
+
+      <div>
+        <div class="muted">Código Fonte:</div>
+        <div><a class="link" href="https://github.com/luismbo/mapa-denuncias-estacionamento" target="_blank">GitHub</a></div>
+      </div>
     </aside>
 
     <div id="map-wrap">
